--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>4.0.1.Final</version>
 		</dependency>		
+	
 
 		<!-- Driver JDBC do MySQL -->
 		<dependency>
@@ -209,6 +210,13 @@
 		   <groupId>org.jboss.resteasy</groupId>
 		   <artifactId>resteasy-jaxrs</artifactId>
 		   <version>2.3.5.Final</version>
+	        <exclusions>
+	            <exclusion>
+	                <groupId>javassist</groupId>
+	                <artifactId>javassist</artifactId>
+	            </exclusion>
+	        </exclusions>			
+		   
 		</dependency>
 		<dependency>
 		   <groupId>org.jboss.resteasy</groupId>
@@ -231,7 +239,25 @@
 			<artifactId>spring-web</artifactId>
 			<version>4.2.0.RELEASE</version>
 		</dependency>
+
+		<dependency>
+		    <groupId>org.javassist</groupId>
+		    <artifactId>javassist</artifactId>
+		    <version>3.18.2-GA</version>
+		</dependency>
 		
+		<dependency>
+		    <groupId>com.thetransactioncompany</groupId>
+		    <artifactId>cors-filter</artifactId>
+		    <version>1.8</version>
+		</dependency>
+		
+<dependency>
+  <groupId>com.squareup.okhttp3</groupId>
+  <artifactId>okhttp</artifactId>
+  <version>3.6.0</version>
+</dependency>
+			
     </dependencies>
 
     <build>
